turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:22: error: ')' expected but ';' found.
		case L => gauche(); setCouleurSol(colors((i+1) % (colors.length); 
                                                                                ^LangtonsAnt:24: error: ')' expected but ';' found.
		case R => droite(); setCouleurSol(colors((i+1) % (colors.length);
                                                                                ^